config/samples/gateway_foundation_a_local.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: foundation-gateway
  namespace: foundation-a
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - foundation-a.localtest.me
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - foundation-a.localtest.me
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: localtest-wildcard-tls
      mode: SIMPLE
