config/samples/gateway_foundation_b_local.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: product-gateway
  namespace: product-b
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - product-b.localtest.me
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - product-b.localtest.me
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: localtest-wildcard-tls
      mode: SIMPLE
